<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/infos"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:text="@string/salvar_informa_es" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Temperatura" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:text="@string/temperatura" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Luminosidade" />
    <TextView
        android:id="@+id/tvLum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:text="@string/luminosidade" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:text="@string/cancelar" />
</LinearLayout>